--- a/bird-species-classification-with-deep-learning.ipynb
+++ b/bird-species-classification-with-deep-learning.ipynb
@@ -2213,7 +2213,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "**If you find the work beneficial, upvote it! I expect your feedbacks on the project. Thanks, Emre**"
+    "**If you find the work beneficial, upvote it! I expect your feedbacks on the project. Thanks, VamsiK**"
    ]
   }
  ],
